# my-rooms-be

./: .env.example  .gitignore  Cargo.toml  diesel.toml  docker-compose.yml
migrations/2024-10-28-095148_create_staff/: down.sql  up.sql
migrations/2024-11-02-022819_create_customer_contacts/: down.sql  up.sql
migrations/2024-11-02-022850_create_room_types/: down.sql  up.sql
migrations/2024-11-02-022916_create_rooms/: up.sql
migrations/2024-11-02-022950_create_reservations/: down.sql  up.sql
migrations/2024-11-02-024555_add_created_by_updated_by_to_room_types_and_rooms/: down.sql  up.sql
migrations/2024-11-02-030938_update_max_length_room_name/: down.sql  up.sql
migrations/2024-11-03-080833_update_type_price_per_night/: down.sql  up.sql
migrations/2024-11-03-113625_make_room_types_type_name_unique/: down.sql  up.sql
migrations/2024-11-04-131345_update_field_reservation/: down.sql  up.sql
migrations/2024-11-05-015910_update_field_customer_contacts/: down.sql  up.sql
migrations/2024-11-10-043812_update_field_reservations/: up.sql
src/: main.rs  schema.rs
src/config/: auth.rs  database.rs
src/handlers/: mod.rs  reservation_handler.rs  room_handler.rs  staff_handler.rs
src/middlewares/: auth.rs
src/models/: customer_contact.rs  jwt.rs  mod.rs  reservation.rs  room.rs  staff.rs
src/routes/: mod.rs  reservation_routes.rs  room_routes.rs  routes.rs  staff_routes.rs
src/services/: mod.rs  reservation_service.rs  room_service.rs  staff_service.rs
src/utils/: common.rs  mod.rs  response.rs
