[package]
name = "my-rooms-be"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.41.0", features = ["full"] }
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "serde_json"] }
dotenv = "0.15.0"
r2d2 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
futures-util = "0.3.31"
thiserror = "2.0.0"